{
  "version": 4,
  "terraform_version": "0.14.1",
  "serial": 80,
  "lineage": "7286bf3f-0287-e432-8a53-2b94be1aa2d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "consul_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053adf54573f777cf",
            "arn": "arn:aws:ec2:us-east-1:997268025157:instance/i-0d0d717ece3ff1371",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0d717ece3ff1371",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "max_imperva",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc88e42f77fbd3f3",
            "private_dns": "ip-10-0-1-177.ec2.internal",
            "private_ip": "10.0.1.177",
            "public_dns": "ec2-3-232-95-170.compute-1.amazonaws.com",
            "public_ip": "3.232.95.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-075abaff18c944aa9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09530f045008c65d8",
            "tags": {
              "Name": "Consul_server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0322aaa0056d9716a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "data.aws_ami.ubuntu-18",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053adf54573f777cf",
            "arn": "arn:aws:ec2:us-east-1:997268025157:instance/i-014aa574b50cb046b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014aa574b50cb046b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "max_imperva",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0375eaafad9a65bd3",
            "private_dns": "ip-10-0-50-86.ec2.internal",
            "private_ip": "10.0.50.86",
            "public_dns": "ec2-3-88-232-112.compute-1.amazonaws.com",
            "public_ip": "3.88.232.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-027fa6f85c573f026",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5a7c2f80f593853",
            "tags": {
              "Name": "Consul_server-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0322aaa0056d9716a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "data.aws_ami.ubuntu-18",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053adf54573f777cf",
            "arn": "arn:aws:ec2:us-east-1:997268025157:instance/i-07abc6e32707f1464",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07abc6e32707f1464",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "max_imperva",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00722ce1add4496cf",
            "private_dns": "ip-10-0-1-233.ec2.internal",
            "private_ip": "10.0.1.233",
            "public_dns": "ec2-3-239-165-49.compute-1.amazonaws.com",
            "public_ip": "3.239.165.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04e06b5dc749ccd33",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09530f045008c65d8",
            "tags": {
              "Name": "Consul_server-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0322aaa0056d9716a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "data.aws_ami.ubuntu-18",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997268025157:security-group/sg-0322aaa0056d9716a",
            "description": "allows project ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0322aaa0056d9716a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow consul UI access from the world",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8500
              }
            ],
            "name": "kalandula_sg",
            "name_prefix": null,
            "owner_id": "997268025157",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c72f2b2168930145"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-088ef878ed6346598",
            "public_dns": "ec2-54-146-83-204.compute-1.amazonaws.com",
            "public_ip": "54.146.83.204",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02b6dd28a62ab66b8",
            "public_dns": "ec2-52-4-14-86.compute-1.amazonaws.com",
            "public_ip": "52.4.14.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997268025157:internet-gateway/igw-0f1323230e37c6748",
            "id": "igw-0f1323230e37c6748",
            "owner_id": "997268025157",
            "tags": {
              "Name": "myIGW"
            },
            "vpc_id": "vpc-0c72f2b2168930145"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw_nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088ef878ed6346598",
            "id": "nat-09730e59bdf197da7",
            "network_interface_id": "eni-0aa77eae0c9beb032",
            "private_ip": "10.0.1.206",
            "public_ip": "54.146.83.204",
            "subnet_id": "subnet-09530f045008c65d8",
            "tags": {
              "Name": "MyNAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ip_nat",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b6dd28a62ab66b8",
            "id": "nat-00fffec4e8c8fe373",
            "network_interface_id": "eni-0a679f614ceb056c4",
            "private_ip": "10.0.50.152",
            "public_ip": "52.4.14.86",
            "subnet_id": "subnet-0c5a7c2f80f593853",
            "tags": {
              "Name": "MyNAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ip_nat",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0972e173b537d712f",
            "owner_id": "997268025157",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09730e59bdf197da7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c72f2b2168930145"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.ip_nat",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_nat_gateway.gw_nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0599187d627f361b9",
            "owner_id": "997268025157",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00fffec4e8c8fe373",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c72f2b2168930145"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.ip_nat",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_nat_gateway.gw_nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0503f47ea40044a64",
            "owner_id": "997268025157",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1323230e37c6748",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c72f2b2168930145"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1-public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e248066b2f76c6d1",
            "route_table_id": "rtb-0503f47ea40044a64",
            "subnet_id": "subnet-09530f045008c65d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_route_table.rt_public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcaef238fbba0600",
            "route_table_id": "rtb-0503f47ea40044a64",
            "subnet_id": "subnet-0c5a7c2f80f593853"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_route_table.rt_public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2-private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046c866f242be3a62",
            "route_table_id": "rtb-0972e173b537d712f",
            "subnet_id": "subnet-0a0a4954fc45b0df1"
          },
          "dependencies": [
            "module.vpc.aws_eip.ip_nat",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_nat_gateway.gw_nat",
            "module.vpc.aws_route_table.rt_private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0337ffaa35a7bdf5b",
            "route_table_id": "rtb-0599187d627f361b9",
            "subnet_id": "subnet-01de50f863dbe1b43"
          },
          "dependencies": [
            "module.vpc.aws_eip.ip_nat",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_nat_gateway.gw_nat",
            "module.vpc.aws_route_table.rt_private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997268025157:subnet/subnet-0a0a4954fc45b0df1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-0a0a4954fc45b0df1",
            "map_public_ip_on_launch": true,
            "owner_id": "997268025157",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-0c72f2b2168930145"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997268025157:subnet/subnet-01de50f863dbe1b43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.150.0/24",
            "id": "subnet-01de50f863dbe1b43",
            "map_public_ip_on_launch": true,
            "owner_id": "997268025157",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-0c72f2b2168930145"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997268025157:subnet/subnet-09530f045008c65d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09530f045008c65d8",
            "map_public_ip_on_launch": true,
            "owner_id": "997268025157",
            "tags": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-0c72f2b2168930145"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997268025157:subnet/subnet-0c5a7c2f80f593853",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.50.0/24",
            "id": "subnet-0c5a7c2f80f593853",
            "map_public_ip_on_launch": true,
            "owner_id": "997268025157",
            "tags": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-0c72f2b2168930145"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997268025157:vpc/vpc-0c72f2b2168930145",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c3d455d18f52de38",
            "default_route_table_id": "rtb-0ae45ae789de5f395",
            "default_security_group_id": "sg-0e7965848b0832341",
            "dhcp_options_id": "dopt-77120c0c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c72f2b2168930145",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ae45ae789de5f395",
            "owner_id": "997268025157",
            "tags": {
              "Name": "kalandula-vpc"
            }
          }
        }
      ]
    }
  ]
}